css/style.css
* {
  box-sizing: border-box;
}

body {
  background-color: gray;
  font-family: system-ui, sans-serif;
  margin: 0;
}

nav {
  background-color: white;
  padding: 8px 16px;
  display: flex;
}

#destinations{
    display:flex;
    justify-content: space-evenly;
    align-items: center;
}

 #actions {
    display: flex;
    justify-content: space-evenly;
}

p {
  margin: 0;
}

section {
  height: 460px;
  background-color: black;
  color: white;
  padding: 24px 72px;
}

h1,
h2 {
  text-align: center;
}

h1 {
  margin-top: 0;
  font-size: 32px;
}

h2 {
  font-size: 16px;
  margin-bottom: 0;
}

input {
  height: 58px;
  width: 80%;
  max-width: 600px;
  border-radius: 29px;
  border: 0px;
  padding: 0 24px;
}

main {
  background-color: white;
  padding: 32px 72px;
}

nav button {
  background-color: #ea4c89;
  border-radius: 8px;
  padding: 10px 16px;
  border: 0;
  color: #ffffff;
  font-weight: 500;
}

.img-placeholder {
  width: 355px;
  height: 270px;
  background-color: gray;
  border-radius: 8px;
}

.card-footer {
  font-size: 14px;
}

.card-footer * {
  margin-top: 8px;
}

#subnav {
  padding: 32px 72px 0;
  background-color: white;
}

#subnav button {
  border-radius: 8px;
  padding: 10px 16px;
  border: 1px solid black;
  background-color: white;
}

#trending p {
  background-color: white;
  color: black;
  border-radius: 50px;
  padding: 6px 15px;
}

